--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -20,7 +20,7 @@
     </article>
     <section class="comment-area" id="comment-area">
         <hr>
-        <h3>发表评论</h3>
+        <h3>关闭了评论功能</h3>
 
         <!--<form action="{% url 'comments:post_comment' post.pk %}" method="post" class="comment-form">-->
             <!--{% csrf_token %}-->
@@ -48,22 +48,22 @@
               <!--</div>-->
             <!--</div>    &lt;!&ndash; row &ndash;&gt;-->
         <!--</form>-->
-        <div class="comment-list-panel">
-            <h3>评论列表，共 <span>4</span> 条评论</h3>
-                <ul class="comment-list list-unstyled">
-                    {% for comment in comment_list %}
-                    <li class="comment-item">
-                      <span class="nickname">{{ comment.name }}</span>
-                      <time class="submit-date">{{ comment.created_time }}</time>
-                      <div class="text">
-                        {{ comment.text }}
-                      </div>
-                    </li>
-                    {% empty %}
-                    暂无评论
-                    {% endfor %}
-                </ul>
-        </div>
+        <!--<div class="comment-list-panel">-->
+            <!--<h3>评论列表，共 <span>4</span> 条评论</h3>-->
+                <!--<ul class="comment-list list-unstyled">-->
+                    <!--{% for comment in comment_list %}-->
+                    <!--<li class="comment-item">-->
+                      <!--<span class="nickname">{{ comment.name }}</span>-->
+                      <!--<time class="submit-date">{{ comment.created_time }}</time>-->
+                      <!--<div class="text">-->
+                        <!--{{ comment.text }}-->
+                      <!--</div>-->
+                    <!--</li>-->
+                    <!--{% empty %}-->
+                    <!--暂无评论-->
+                    <!--{% endfor %}-->
+                <!--</ul>-->
+        <!--</div>-->
     </section>
 {% endblock main %}
 {% block toc %}
