--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hu &amp; YueXin</title>
+    <title>胡跃新的个人空间</title>
 
     <!-- meta -->
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="{% url 'blog:index' %}"><b>Hu</b> &amp; YueXin</a></h1>
+                    <h1><a href="{% url 'blog:index' %}"><b>胡跃新</b> &amp;的个人空间</a></h1>
                     <!--<h1><a href="{% url 'blog:index' %}"><b>Black</b> &amp; White</a></h1>-->
                 </div>
             </div><!-- col-md-4 -->
