--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -20,7 +20,7 @@
     </article>
     <section class="comment-area" id="comment-area">
         <hr>
-        <h3>关闭了评论功能</h3>
+        <h3>关闭了评论功能！！！</h3>
 
         <!--<form action="{% url 'comments:post_comment' post.pk %}" method="post" class="comment-form">-->
             <!--{% csrf_token %}-->
